Fix long collapsed descriptions still showing in mobile

--- a/site/css/card.css
+++ b/site/css/card.css
@@ -29,11 +29,11 @@
 }
 
 .expand-contract {
-	margin-top: -400%;
+	height: 0;
 	transition: all 0.5s ease-in-out;
 	margin-bottom: 0;
 }
 
 .expand-contract.expanded {
-	margin-top: 0;
+	height: fit-content;
 }
